# ersilia-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  scratch.py
.streamlit/: config.toml
data/: README.md  ersilia-models.txt  generate_queries.py  metadata_pipeline.py
data/data/: ai_generated_queries.csv  model_ids.csv
data/diseases/: dracunculiasis.json  human_african_trypanosomiasis.json  leishmaniasis.json  lymphatic_filariasis.json  mycetoma.json  noma.json  onchocerciasis.json  schistosomiasis.json
data/ersilia-models/: eos3b5e.json
data/models-metadata/: eos1mxi.json  eos1n4b.json  eos1noy.json  eos1pu1.json  eos24ur.json  eos2gth.json  eos2hzy.json  eos2l0q.json  eos39co.json  eos3ev6.json  eos3le9.json  eos3wzy.json  eos3zur.json  eos42ez.json  eos4avb.json  eos4f95.json  eos4q1a.json  eos4qda.json  eos4se9.json  eos4wt0.json  eos57bx.json  eos5cl7.json  eos5gge.json  eos5guo.json  eos5jz9.json  eos5qfo.json  eos5xng.json  eos69e6.json  eos6aun.json  eos6m4j.json  eos6ost.json  eos6pbf.json  eos6ru3.json  eos6tg8.json  eos7a45.json  eos7jlv.json  eos7nno.json  eos80ch.json  eos85a3.json  eos8aox.json  (+8 more)
demo/: app.py  inputs.py  response.json
demo/responses/: C_N_Expand.txt  C_N_Select.txt  C_N_Toxic.txt  C_N_Toxic_different.txt  C_S_Expand.txt  C_S_Select.txt  C_S_Select_different.txt  C_S_Toxic.txt  M_N_Expand.txt  M_N_Expand_different.txt  M_N_Select.txt  M_N_Toxic.txt  M_S_Expand.txt  M_S_Select.txt  M_S_Toxic.txt  README.md  T_N_Expand.txt  T_N_Select.txt  T_N_Select_different.txt  T_N_Toxic.txt  T_S_Expand.txt  T_S_Select.txt  T_S_Toxic.txt
demo/responses_edited/: C_N_Expand.md  C_N_Expand.txt  C_N_Select.txt  C_N_Toxic.txt  C_S_Expand.txt  C_S_Select.txt  C_S_Toxic.txt  M_N_Expand.txt  M_N_Select.txt  M_N_Toxic.txt  M_S_Expand.txt  M_S_Select.txt  M_S_Toxic.txt  T_N_Expand.txt  T_N_Select.txt  T_N_Toxic.txt  T_S_Expand.txt  T_S_Select.txt  T_S_Toxic.txt
dockerfiles/: Dockerfile.llamafile
experiments/: Meta-Llama-3-8B-Instruct.Q4_K_M_results.csv  Meta-Llama-3-8B-Instruct.Q4_K_S_results.csv  Meta-Llama-3-8B-Instruct.Q5_K_M_results.csv  Meta-Llama-3-8B-Instruct.Q5_K_S_results.csv  Meta-Llama-3.1-8B-Instruct.Q4_K_M_results.csv  Meta-Llama-3.1-8B-Instruct.Q4_K_S_results.csv  Meta-Llama-3.1-8B-Instruct.Q5_K_S_results.csv  README.md  prompts.txt  run_model.py
llamafile-infra/: README.md  samconfig.toml  template.yaml
llamafile-infra/src/: Dockerfile  command.sh  runner.py
streamlit/: Dockerfile  app.py
(+229 files in other folders)
