[tool.poetry]
name = "ersilia-assistant"
version = "1.0.0"
description = ""
authors = ["Dhanshree Arora <dhanshree@ersilia.io>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/ersilia-os/ersilia-assistant"
packages = [{ include = "ersilia_assistant", from = "src" }]
include = [
    "data/diseases/*.json",
    "data/diseases/store/*.json",
    "data/models/*.json",
    "data/models/store/*.json",
    "data/publications/*.json",
    "data/publications/store/*.json",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "0.115.4"
uvicorn = "0.32.0"
huggingface-hub = "0.25.1"
llama-index = "0.11.14"
llama-index-agent-openai = "0.3.4"
llama-index-core = "0.11.14"
llama-index-embeddings-huggingface = "0.3.1"
llama-index-embeddings-openai = "0.2.5"
llama-index-llms-llamafile = "0.2.1"
llama-index-llms-openai = "0.2.9"
llama-index-multi-modal-llms-openai = "0.2.1"
llama-index-question-gen-openai = "0.2.0"
openai = "1.47.1"
sentence-transformers = "3.1.1"
tiktoken = "0.7.0"
tokenizers = "0.20.0"
torch = "2.4.1"
transformers = "4.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
